--- a/style.css
+++ b/style.css
@@ -87,11 +87,21 @@ body {
 	.container {
 		width: 90%;
 		margin: 0 auto;
+		padding: 20px;
+	}
+
+	.container h1 {
+		font-size: 24px;
+	}
+
+	.container label {
+		font-size: 16px;
 	}
 	
 	.container button {
-		width: 100%;
-		margin-left: 0;
+		width: 50%;
+		margin-left: 10;
 		margin-right: 0;
+		font-size: 16px;
 	}
 }
